--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -16,6 +16,11 @@ path = "derive_example.rs"
 name = "generator_example"
 path = "generator_example.rs"
 
+[[example]]
+name = "serde_rename_test"
+path = "serde_rename_test.rs"
+
 [dependencies]
 zod_gen = { path = "../zod_gen" }
 zod_gen_derive = { path = "../zod_gen_derive" }
+serde = { version = "1.0", features = ["derive"] }
