--- a/zod_gen/Cargo.toml
+++ b/zod_gen/Cargo.toml
@@ -9,7 +9,7 @@ documentation.workspace = true
 authors.workspace = true
 keywords.workspace = true
 categories.workspace = true
-description = "Generate Zod schemas and TypeScript types from Rust types"
+description = "Generate Zod schemas and TypeScript types from Rust types with serde rename support"
 
 [dependencies]
 serde.workspace = true
