--- a/zod_gen_derive/Cargo.toml
+++ b/zod_gen_derive/Cargo.toml
@@ -9,7 +9,7 @@ documentation.workspace = true
 authors.workspace = true
 keywords.workspace = true
 categories.workspace = true
-description = "Derive macro for zod_gen - automatically generate Zod schemas from Rust types"
+description = "Derive macro for zod_gen - automatically generate Zod schemas from Rust types with serde rename support"
 
 [lib]
 proc-macro = true
@@ -18,4 +18,4 @@ proc-macro = true
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
-zod_gen = { version = "1.0.0", path = "../zod_gen" }
+zod_gen = { version = "1.1.0", path = "../zod_gen" }
