--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write  # Required to create releases and upload assets
+  
 env:
   CARGO_TERM_COLOR: always
 
