fix: add serde_rename_test example to release validation
Include the serde_rename_test example in the release validation to ensure
the new serde rename functionality works correctly before publishing.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,7 @@ jobs:
         cargo run --example basic_usage
         cargo run --example derive_example
         cargo run --example generator_example
+        cargo run --example serde_rename_test
     
     - name: Dry run publish
       run: |
