fix: make derive macro doctest non-compiling
Use 'ignore' attribute for the derive macro example since zod_gen_derive
is a separate crate and not available during zod_gen's doctests.
The example is still valuable for documentation purposes.

--- a/zod_gen/Cargo.toml
+++ b/zod_gen/Cargo.toml
@@ -9,7 +9,7 @@ documentation.workspace = true
 authors.workspace = true
 keywords.workspace = true
 categories.workspace = true
-description = "Generate Zod schemas and TypeScript types from Rust types with serde rename support"
+description = "Generate Zod schemas and TypeScript types from Rust types. Use with zod_gen_derive for automatic #[derive(ZodSchema)] support and serde rename compatibility."
 
 [dependencies]
 serde.workspace = true
