--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -14,21 +14,21 @@ jobs:
     - uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-    
+
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
-    
+
     - name: Install cargo-edit
       run: cargo install cargo-edit
-    
+
     - name: Update dependencies
       run: |
         cargo update
-        cargo upgrade --workspace
-    
+        cargo upgrade
+
     - name: Run tests
       run: cargo test --workspace
-    
+
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v5
       with:
@@ -37,9 +37,9 @@ jobs:
         title: 'chore: update dependencies'
         body: |
           Automated dependency update.
-          
+
           This PR updates all dependencies to their latest compatible versions.
-          
+
           Please review the changes and ensure all tests pass before merging.
         branch: update-dependencies
         delete-branch: true
@@ -49,16 +49,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
-    
+
     - name: Install cargo-audit
       run: cargo install cargo-audit
-    
+
     - name: Run security audit
       run: cargo audit
-    
+
     - name: Create issue on security vulnerability
       if: failure()
       uses: actions/github-script@v7
