--- a/zod_gen_derive/Cargo.toml
+++ b/zod_gen_derive/Cargo.toml
@@ -18,4 +18,5 @@ proc-macro = true
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
+serde.workspace = true
 zod_gen = { version = "1.1.19", path = "../zod_gen" }
