--- a/zod_gen_derive/Cargo.toml
+++ b/zod_gen_derive/Cargo.toml
@@ -19,3 +19,6 @@ proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
 zod_gen = { version = "1.1.19", path = "../zod_gen" }
+
+[dev-dependencies]
+serde.workspace = true
